Fixed peer dependency (grunt 1.0.0)
Support grunt 1.0.0

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "grunt-jsbeautifier": "^0.2.10"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": ">=0.4.5"
   },
   "bugs": {
     "url": "https://github.com/mavdi/grunt-cucumberjs/issues"
